--- a/bin/credits.html
+++ b/bin/credits.html
@@ -87,7 +87,7 @@
         </span>
     </div>
         <div class="product">
-        <span class="title">openssl_3</span>
+        <span class="title">openssl</span>
         <span class="homepage">
             <a
                     href="https://www.openssl.org/"
@@ -112,7 +112,7 @@
             >licence</a>
         </span>
     </div>
-                    <div class="product">
+        <div class="product">
         <span class="title">libxml2</span>
         <span class="homepage">
             <a
@@ -190,33 +190,7 @@
             >licence</a>
         </span>
     </div>
-                    <div class="product">
-        <span class="title">icu_2</span>
-        <span class="homepage">
-            <a
-                    href="https://icu.unicode.org/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-            >homepage</a>
-        </span>
-        <span class="manual">
-            <a
-                    href="https://unicode-org.github.io/icu/userguide/icu4c/build.html"
-                    target="_blank"
-                    rel="noopener noreferrer"
-            >manual</a>
-        </span>
-        <input type="checkbox" hidden="hidden" id=""/>
-        <label class="show" tabindex="0"></label>
-        <span class="licence">
-            <a
-                    href="https://github.com/unicode-org/icu/blob/main/icu4c/LICENSE"
-                    target="_blank"
-                    rel="noopener noreferrer"
-            >licence</a>
-        </span>
-    </div>
-                                            <div class="product">
+                                                        <div class="product">
         <span class="title">zlib</span>
         <span class="homepage">
             <a
@@ -528,8 +502,8 @@
             >licence</a>
         </span>
     </div>
-                    <div class="product">
-        <span class="title">cares_2</span>
+        <div class="product">
+        <span class="title">cares</span>
         <span class="homepage">
             <a
                     href="https://c-ares.org/"
@@ -580,7 +554,7 @@
             >licence</a>
         </span>
     </div>
-                                <div class="product">
+        <div class="product">
         <span class="title">curl</span>
         <span class="homepage">
             <a
@@ -736,7 +710,7 @@
             >licence</a>
         </span>
     </div>
-                                                                                                                        
+
                                                                                                                                                                                                                                                                                                                                                                                     <div class="product">
             <span class="title">php-ext-redis</span>
             <span class="homepage"></span>
@@ -812,26 +786,6 @@
             <span class="licence">
                 <a
                         href="https://github.com/krakjoe/apcu/blob/master/LICENSE"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                >licence</a>
-            </span>
-        </div>
-                <div class="product">
-            <span class="title">php-ext-ffi</span>
-            <span class="homepage"></span>
-            <span class="manual">
-                <a
-                        href=""
-                        target="_blank"
-                        rel="noopener noreferrer"
-                >manual</a>
-            </span>
-            <input type="checkbox" hidden="hidden" id=""/>
-            <label class="show" tabindex="0"></label>
-            <span class="licence">
-                <a
-                        href="http://github.com/libffi/libffi/blob/master/LICENSE"
                         target="_blank"
                         rel="noopener noreferrer"
                 >licence</a>
