--- a/bin/credits.html
+++ b/bin/credits.html
@@ -190,7 +190,7 @@
             >licence</a>
         </span>
     </div>
-                                                        <div class="product">
+                                            <div class="product">
         <span class="title">zlib</span>
         <span class="homepage">
             <a
@@ -268,7 +268,59 @@
             >licence</a>
         </span>
     </div>
-                                <div class="product">
+        <div class="product">
+        <span class="title">liblzma</span>
+        <span class="homepage">
+            <a
+                    href="https://tukaani.org/xz/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >homepage</a>
+        </span>
+        <span class="manual">
+            <a
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >manual</a>
+        </span>
+        <input type="checkbox" hidden="hidden" id=""/>
+        <label class="show" tabindex="0"></label>
+        <span class="licence">
+            <a
+                    href="https://git.tukaani.org/?p=xz.git;a=blob;f=COPYING"
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >licence</a>
+        </span>
+    </div>
+        <div class="product">
+        <span class="title">libzstd</span>
+        <span class="homepage">
+            <a
+                    href="https://github.com/facebook/zstd"
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >homepage</a>
+        </span>
+        <span class="manual">
+            <a
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >manual</a>
+        </span>
+        <input type="checkbox" hidden="hidden" id=""/>
+        <label class="show" tabindex="0"></label>
+        <span class="licence">
+            <a
+                    href="https://github.com/facebook/zstd/blob/dev/COPYING"
+                    target="_blank"
+                    rel="noopener noreferrer"
+            >licence</a>
+        </span>
+    </div>
+        <div class="product">
         <span class="title">zip</span>
         <span class="homepage">
             <a
@@ -554,7 +606,7 @@
             >licence</a>
         </span>
     </div>
-        <div class="product">
+                                <div class="product">
         <span class="title">curl</span>
         <span class="homepage">
             <a
@@ -776,7 +828,7 @@
             <span class="homepage"></span>
             <span class="manual">
                 <a
-                        href=""
+                        href="https://github.com/krakjoe/apcu"
                         target="_blank"
                         rel="noopener noreferrer"
                 >manual</a>
