--- a/sapi/dashboard/public/index.html
+++ b/sapi/dashboard/public/index.html
@@ -90,8 +90,8 @@
                         <label>
                             <span>使用镜像库站下载依赖库：</span>
                             <select name="with-download-mirror-url">
-                                <option value="1">不使用</option>
-                                <option value="0">使用</option>
+                                <option value="0">不使用</option>
+                                <option value="https://swoole-cli.jingjingxyk.com/">使用</option>
                             </select>
                         </label>
                         <label>
