--- a/sapi/dashboard/public/index.html
+++ b/sapi/dashboard/public/index.html
@@ -10,48 +10,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="keywords" content="swoole-cli ui"/>
     <meta name="description" content="swoole-cli ui"/>
+    <link rel="stylesheet" type="text/css" href="/css/base.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/app.css"/>
     <style>
-        label {
-            color: #000;
-            /*
-            background-color: #ffc107;
-            border-color: #ffc107;
 
-             */
-            color:#2ecc71;
-            color:#8e44ad;
-        }
-
-        button {
-            display: inline-block;
-            font-weight: 400;
-            line-height: 1.5;
-            color: #212529;
-            text-align: center;
-            text-decoration: none;
-            vertical-align: middle;
-            cursor: pointer;
-            user-select: none;
-            background-color: transparent;
-            border: 1px solid transparent;
-            padding: 0.375rem 0.75rem;
-        }
-
-        .btn-success {
-            color: #fff;
-            background-color: #198754;
-            border-color: #198754;
-        }
-        li{
-            list-style: none;
-        }
-        .extension-list {
-            display: flex;
-        }
-        .ready_extension{
-            background-color:#1abc9c;
-            color:#1f2328;
-        }
     </style>
 </head>
 <body>
@@ -109,12 +71,12 @@
                 <section class="extension-list">
                     <div>
                         <label> 支持的扩展列表
-                            <ul name="all_extentions"></ul>
+                            <ul name="all_extentions" class="all_extentions"></ul>
                         </label>
                     </div>
                     <div>
                         <label> 将编译的扩展</label>
-                        <ul name="ready_extentions"></ul>
+                        <ul name="ready_extentions" class="default_extensions"></ul>
                     </div>
                 </section>
 
